[workspace]
resolver = "2"
members = ["feldman_vss", "modulo_arithmetic", "shamir_secret_sharing"]

[workspace.dependencies]
bs58 = "*"
blake2 = "*"
dashmap = "5"
derive_more = "0.99"
hex = "*"
k256 = { version = "0.13", features = ["serde"] }
num-bigint = { version = "0.4", features = ["rand", "serde"] }
num-traits = "0.2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-pickle = "1.1.1"
tokio = { version = "1", features = ["full"] }

# ==== DIY crates below =====
modulo_arithmetic = { path = "./modulo_arithmetic" }
shamir_secret_sharing = { path = "./shamir_secret_sharing" }

[patch.crates-io]
k256 = { path = "patches/k256-0.13.3" }
