[package]
name = "feldman_vss"
version = "0.1.0"
edition = "2021"

[dependencies]
blake2 = { workspace = true }
bs58 = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true }
hex = { workspace = true }
k256 = { workspace = true }

# ==== DIY crates below =====
modulo_arithmetic = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde-pickle = { workspace = true }
shamir_secret_sharing ={ workspace = true }
tokio = { workspace = true }

[dev-dependencies]
glob = "*"
